<resources>
    <string name="app_name">Web Macro Cloud</string>
    <string name="intent_name">Record</string>

    <!-- Strings used for menu -->
    <string name="action_plan">Upgrade / Downgrade</string>
    <string name="action_sign_out">Sign out</string>
    <string name="action_tutorial">Tutorial</string>
    <string name="action_replay">Replay</string>
    <string name="action_done">Done</string>
    <string name="action_add_timer">Add timer</string>
    <string name="action_save">Save</string>
    <string name="action_edit_macro">Edit this macro</string>
    <string name="action_view_histories">View histories</string>
    <string name="action_open_website">Open website</string>
    <string name="action_reset">Reset</string>
    <string name="action_previous">Previous</string>
    <string name="action_next">Next</string>

    <!-- Strings used for validation -->
    <string name="error_enter_here">Enter %1$s here</string>
    <string name="error_format_is_invalid">%1$s format is invalid</string>
    <string name="error_deadline_exceeded">Timeout error occurred</string>
    <string name="error_timeout">Event not completed in 30 seconds</string>
    <string name="error_unavailable">Out of memory error occurred</string>
    <string name="error_internal">Network error occurred</string>
    <string name="error_unauthenticated">Not authenticated</string>
    <string name="error_unknown">Unknown error occurred</string>
    <string name="error_invalid_argument">Argument is invalid</string>
    <string name="error_permission_denied">Permission is denied</string>
    <string name="error_not_found">Requested data is not found</string>

    <!-- Strings used for data -->
    <string name="url">URL</string>
    <string name="name">macro name</string>

    <!-- Strings used for navigation -->
    <string name="list_fragment_label">Your Macro List</string>
    <string name="edit_url_fragment_label">Enter Website URL</string>
    <string name="edit_record_fragment_label">Record Your Macro</string>
    <string name="edit_events_fragment_label">Edit Events</string>
    <string name="confirm_fragment_label">Confirm Your Macro</string>
    <string name="edit_fragment_label">Edit Your Macro</string>
    <string name="edit_schedule_fragment_label">Edit Schedule</string>
    <string name="edit_selected_area_fragment_label">Select Area</string>
    <string name="view_histories_fragment_label">Loading Histories...</string>
    <string name="view_history_fragment_label">Loading History...</string>
    <string name="tutorial_fragment_label">Tutorial</string>
    <string name="plan_fragment_label">Upgrade / Downgrade</string>

    <!-- Strings used for tutorial fragment -->
    <string name="button_continue">Continue</string>
    <string name="button_start">Start</string>
    <string name="text_tutorial1">Save your precious time\nand your phone\&apos;s battery</string>
    <string name="text_tutorial2">Start recording your macro\nby entering the target site URL</string>
    <string name="text_tutorial3">You can also start recording\nyour macro from Chrome\&apos; share</string>
    <string name="text_tutorial4">You can edit your record by sorting\nand removing events and add timers</string>
    <string name="text_tutorial5">You can get notified by app\nwhen selected area is updated</string>

    <!-- Strings used for list fragment -->
    <string name="notification_macro_succeeded">Running macro succeeded</string>
    <string name="notification_entire_page_changed">Detected entire page update</string>
    <string name="notification_selected_area_changed">Detected selected area update</string>
    <string name="text_no_name">No name</string>
    <string name="text_error">Error</string>
    <string name="text_success">Success</string>
    <string name="text_change">Change detected</string>
    <string name="text_date_latest">...</string>

    <!-- Strings used for edit url fragment -->
    <string name="hint_url">Enter URL</string>
    <string name="button_start_recording">Start recording</string>

    <!-- Strings used for edit record fragment -->
    <string name="notification_click">Tapped %1$s</string>
    <string name="notification_click_value">Tapped %1$s\n%2$s</string>
    <string name="notification_type_value">Typed %1$s\n%2$s</string>
    <string name="notification_select_value">Selected %1$s\n%2$s</string>
    <string name="notification_restart_recording">Restart recording</string>
    <string name="notification_wait_for_navigation">Navigation completed\n%1$s</string>

    <!-- Strings used for edit events fragment -->
    <string name="text_name_click">Tap</string>
    <string name="text_name_type">Type</string>
    <string name="text_name_select">Select</string>
    <string name="text_name_timer">Timer</string>
    <string name="text_name_page">Page</string>
    <string name="text_target_type_image">Image</string>
    <string name="text_target_type_link">Link</string>
    <string name="text_target_type_frame">Frame</string>
    <string name="text_target_type_input">Input</string>
    <string name="text_target_type_checkbox">Checkbox</string>
    <string name="text_target_type_radio">Radio button</string>
    <string name="text_target_type_button">Button</string>
    <string name="text_target_type_select">Select box</string>
    <string name="text_target_type_password">Password</string>
    <string name="text_target_type_text">Text</string>
    <string name="text_target_type_wait_for_navigation">Wait for navigation</string>
    <string name="text_target_type_wait_for_timer">Wait for timer</string>
    <string name="text_value_seconds">%1$s seconds</string>
    <string name="text_value_empty">No text</string>

    <!-- Strings used for edit events dialog fragment -->
    <string name="text_add_timer">Add timer</string>
    <string name="text_add">Add</string>
    <string name="text_close">Close</string>
    <string name="text_seconds">Seconds</string>
    <string name="hint_seconds">3</string>

    <!-- Strings used for edit fragment -->
    <string name="text_name_title">Name</string>
    <string name="hint_name">Enter name</string>
    <string name="text_macro">Macro</string>
    <string name="text_schedule_everyday">every day</string>
    <string name="text_schedule_weekdays">weekdays</string>
    <string name="text_schedule_weekends">weekends</string>
    <string name="text_schedule_sunday">Sunday</string>
    <string name="text_schedule_monday">Monday</string>
    <string name="text_schedule_tuesday">Tuesday</string>
    <string name="text_schedule_wednesday">Wednesday</string>
    <string name="text_schedule_thursday">Thursday</string>
    <string name="text_schedule_friday">Friday</string>
    <string name="text_schedule_saturday">Saturday</string>
    <string name="text_schedule_days">%1$s/7 days</string>
    <string name="text_schedule">Scheduled %1$s at %2$s</string>
    <string name="text_schedule_title">Schedule</string>
    <string name="text_notification_title">Notification</string>
    <string name="text_notify_success">Send app notification on success</string>
    <string name="text_notify_failure">Send app notification on error</string>
    <string name="text_update_check_title">Update check</string>
    <string name="text_check_entire_page">Check entire page for update</string>
    <string name="text_check_selected_area">Check area %1$s for update</string>
    <string name="text_area_not_selected">Select area to check update</string>
    <string name="text_back_to_macro_list">Back</string>
    <string name="button_save">Save</string>
    <string name="button_delete">Delete this macro</string>
    <string name="message_delete">Do you really want to delete this macro?</string>
    <string name="message_yes">Yes</string>
    <string name="message_no">No</string>
    <string name="notification_update_macro">Saved your macro update</string>
    <string name="notification_not_update_macro">Select at least one day of week</string>

    <!-- Strings used for edit schedule fragment -->
    <string name="text_sunday">Su.</string>
    <string name="text_monday">Mo.</string>
    <string name="text_tuesday">Tu.</string>
    <string name="text_wednesday">We.</string>
    <string name="text_thursday">Th.</string>
    <string name="text_friday">Fr.</string>
    <string name="text_saturday">Sa.</string>
    <string name="text_back_to_macro_edit">Back</string>

    <!-- Strings used for edit selected area fragment -->
    <string name="notification_select_area">Hold down the screenshot to select area</string>
    <string name="notification_area_selected">Tap check mark to save the area</string>

    <!-- Strings used for view histories fragment -->
    <string name="text_check_screenshot">Check screenshot</string>
</resources>
