<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/listFragment">

    <fragment
        android:id="@+id/listFragment"
        android:name="inc.proto.websitemacrorecorder.ui.list.ListFragment"
        android:label="@string/list_fragment_label"
        tools:layout="@layout/fragment_list">
        <action
            android:id="@+id/action_listFragment_to_editUrlFragment"
            app:destination="@id/editUrlFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />
        <action
            android:id="@+id/action_listFragment_to_editFragment"
            app:destination="@id/editFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />
    </fragment>
    <fragment
        android:id="@+id/editUrlFragment"
        android:name="inc.proto.websitemacrorecorder.ui.edit_url.EditUrlFragment"
        android:label="@string/edit_url_fragment_label"
        tools:layout="@layout/fragment_edit_url">
        <argument
            android:name="macro"
            app:argType="inc.proto.websitemacrorecorder.data.Macro"/>
        <action
            android:id="@+id/action_editUrlFragment_to_editRecordFragment"
            app:destination="@id/editRecordFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />
    </fragment>
    <fragment
        android:id="@+id/editRecordFragment"
        android:name="inc.proto.websitemacrorecorder.ui.edit_record.EditRecordFragment"
        android:label="@string/edit_record_fragment_label"
        tools:layout="@layout/fragment_edit_record">
        <argument
            android:name="macro"
            app:argType="inc.proto.websitemacrorecorder.data.Macro"/>
        <action
            android:id="@+id/action_editRecordFragment_to_editEventsFragment"
            app:destination="@id/editEventsFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />
    </fragment>
    <fragment
        android:id="@+id/editEventsFragment"
        android:name="inc.proto.websitemacrorecorder.ui.edit_events.EditEventsFragment"
        android:label="@string/edit_events_fragment_label">
        <argument
            android:name="macro"
            app:argType="inc.proto.websitemacrorecorder.data.Macro" />
        <action
            android:id="@+id/action_editEventsFragment_to_confirmFragment"
            app:destination="@id/confirmFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />
    </fragment>
    <fragment
        android:id="@+id/confirmFragment"
        android:name="inc.proto.websitemacrorecorder.ui.confirm.ConfirmFragment"
        android:label="@string/confirm_fragment_label"
        tools:layout="@layout/fragment_confirm" >
        <argument
            android:name="macro"
            app:argType="inc.proto.websitemacrorecorder.data.Macro"/>
        <action
            android:id="@+id/action_confirmFragment_to_editFragment"
            app:destination="@id/editFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right"/>
    </fragment>
    <fragment
        android:id="@+id/editFragment"
        android:name="inc.proto.websitemacrorecorder.ui.edit.EditFragment"
        android:label="@string/edit_fragment_label"
        tools:layout="@layout/fragment_edit">
        <argument
            android:name="macro"
            app:argType="inc.proto.websitemacrorecorder.data.Macro"/>
        <action
            android:id="@+id/action_editFragment_to_editScheduleFragment"
            app:destination="@id/editScheduleFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />
        <action
            android:id="@+id/action_editFragment_to_editUrlFragment"
            app:destination="@id/editUrlFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />
        <action
            android:id="@+id/action_editFragment_to_listFragment"
            app:destination="@id/listFragment"
            app:enterAnim="@anim/slide_in_left"
            app:exitAnim="@anim/slide_out_right"
            app:popEnterAnim="@anim/slide_in_right"
            app:popExitAnim="@anim/slide_out_left" />
    </fragment>
    <fragment
        android:id="@+id/editScheduleFragment"
        android:name="inc.proto.websitemacrorecorder.ui.edit_schedule.EditScheduleFragment"
        android:label="@string/edit_schedule_fragment_label"
        tools:layout="@layout/fragment_edit_schedule">
        <argument
            android:name="macro"
            app:argType="inc.proto.websitemacrorecorder.data.Macro"/>
        <action
            android:id="@+id/action_editScheduleFragment_to_editFragment"
            app:destination="@id/editFragment"
            app:enterAnim="@anim/slide_in_left"
            app:exitAnim="@anim/slide_out_right"
            app:popEnterAnim="@anim/slide_in_right"
            app:popExitAnim="@anim/slide_out_left" />
    </fragment>
    <fragment
        android:id="@+id/planFragment"
        android:name="inc.proto.websitemacrorecorder.ui.plan.PlanFragment"
        android:label="@string/plan_fragment_label"
        tools:layout="@layout/fragment_plan" />
    <action
        android:id="@+id/action_global_listFragment"
        app:destination="@id/listFragment" />
    <action
        android:id="@+id/action_global_planFragment"
        app:destination="@id/planFragment"
        app:popUpTo="@id/listFragment"
        app:enterAnim="@anim/slide_in_top"
        app:exitAnim="@anim/slide_out_bottom"
        app:popEnterAnim="@anim/slide_in_bottom"
        app:popExitAnim="@anim/slide_out_top" />
</navigation>
