<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_history"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/text_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/colorPrimary"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/image_date"
        app:layout_constraintStart_toEndOf="@+id/image_date"
        app:layout_constraintTop_toTopOf="@+id/image_date" />

    <ImageView
        android:id="@+id/image_date"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:tint="@color/colorPrimary"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_access_time_black_24dp" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_line"
        android:layout_width="8dp"
        android:layout_height="80dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:background="@color/colorPrimary"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image_date">

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/card"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginStart="8dp"
        app:cardCornerRadius="40dp"
        app:layout_constraintBottom_toBottomOf="@+id/layout_line"
        app:layout_constraintStart_toEndOf="@+id/layout_line"
        app:layout_constraintTop_toBottomOf="@+id/image_date">

        <inc.proto.websitemacrorecorder.util.TopCropImageView
            android:id="@+id/image_screenshot"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </androidx.cardview.widget.CardView>

    <com.google.android.material.chip.Chip
        android:id="@+id/chip_change"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/text_change"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        android:visibility="gone"
        app:chipBackgroundColor="@color/colorSecondary"
        app:layout_constraintStart_toEndOf="@+id/chip_error"
        app:layout_constraintTop_toTopOf="@+id/chip_error" />

    <com.google.android.material.chip.Chip
        android:id="@+id/chip_error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/text_error"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        android:visibility="gone"
        app:chipBackgroundColor="@color/colorDelete"
        app:layout_constraintStart_toEndOf="@+id/chip_success"
        app:layout_constraintTop_toTopOf="@+id/chip_success" />

    <com.google.android.material.chip.Chip
        android:id="@+id/chip_success"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/text_success"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        android:visibility="gone"
        app:chipBackgroundColor="@color/colorSuccess"
        app:layout_constraintStart_toEndOf="@+id/card"
        app:layout_constraintTop_toTopOf="@+id/card" />

    <com.google.android.material.chip.Chip
        android:id="@+id/chip_check_screenshot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/text_check_screenshot"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        app:chipBackgroundColor="@color/colorPrimary"
        app:chipIcon="@drawable/ic_compare_white_24dp"
        app:chipIconSize="16dp"
        app:chipStartPadding="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/card" />

</androidx.constraintlayout.widget.ConstraintLayout>
